# holographic-simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: data.md  engineering.md  physics.md
.github/workflows/: tests.yml
backend/: pyproject.toml
backend/api/: __init__.py
backend/core/: __init__.py  render_universe.py  universe_simulator.py
backend/dynamics/: __init__.py  critical_points.py  dark_matter.py  observables.py  ode_system.py  solver.py
backend/island/: __init__.py
backend/island/islands_module/: README.md  __init__.py  entropy_model.py  render_island.py
backend/observation/: __init__.py  desi_dr2.py
backend/statistics/: __init__.py
backend/tests/: test_black_hole_island.py  test_core_constants.py  test_dark_matter_curve.py  test_desi_dr2_loader.py  test_dynamics_placeholders.py  test_observables.py
docs/: architecture.md  physics_to_code_map.md  stage_0_scaffolding.md
