[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holographic-simulator"
version = "0.1.0a0"
description = "Open-source simulator for the Holographic Geometric Framework"
readme = { text = "Open-source simulator for the Holographic Geometric Framework.", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yiling Zhu", email = "wilsonzhuyiling@gmail.com" }
]
keywords = ["cosmology", "dark-energy", "holographic", "DESI", "simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pydantic>=2.5",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pillow>=10.0",      # used by legacy renderer
]
all = [
    "holographic-simulator[api,dev]",
]

[project.urls]
Homepage = "https://github.com/wilsonzhuyiling-hub/holographic-simulator"
Repository = "https://github.com/wilsonzhuyiling-hub/holographic-simulator"
Issues = "https://github.com/wilsonzhuyiling-hub/holographic-simulator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "dynamics*", "observation*", "statistics*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # relax for now; tighten later
